--- a/modules/web/src/com/zk/nlqc/web/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages.properties
@@ -13,3 +13,4 @@ menu-config.nlqc_Material.browse=Materials
 menu-config.nlqc_QcArgs.browse=Qc Argses
 menu-config.nlqc_WorkStation.browse=Work Stations
 menu-config.qcConfig=Qc Config
+menu-config.nlqc_QcCourse.browse=Qc Courses
