--- a/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
@@ -1,3 +1,11 @@
+
+application.caption = nlqc
+application.logoImage = branding/app-icon-menu.png
+
+loginWindow.logoImage = branding/app-icon-login.png
+
+menu-config.application-nlqc = Application
+
 menu-config.base=基础模块
 menu-config.nlqc_CarModel.browse=车型
 menu-config.nlqc_Device.browse=仪器
@@ -6,3 +14,4 @@ menu-config.nlqc_QcArgs.browse=检测参数
 menu-config.nlqc_Material.browse=物料
 menu-config.qcConfig=质检配置
 menu-config.nlqc_WorkStation.browse=质检工作站
+menu-config.nlqc_QcCourse.browse=质检途程
