车型质检配置

--- a/modules/global/src/com/zk/nlqc/entitys/complex/messages.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/complex/messages.properties
@@ -10,3 +10,32 @@ QcCourse.qcCourseNo=Qc course no
 QcCourse.qcCourseName=Qc course name
 QcCourse.workStation=Work station
 QcCourse.note=Note
+QcCourse.qcFlow=Qc flow
+QcItem=Qc item
+QcItem.qcItemNo=Qc item no
+QcItem.qcItemName=Qc item name
+QcItem.qcArgs=Qc args
+QcItem.device=Device
+QcItem.mateial=Mateial
+QcItem.unit=Unit
+QcItem.normValue=Norm value
+QcItem.upValue=Up value
+QcItem.belowValue=Below value
+QcItem.isFirstQc=Is first qc
+QcItem.firstQcFrequency=First qc frequency
+QcItem.isInitiativeQc=Is initiative qc
+QcItem.initiativeQcFrequency=Initiative qc frequency
+QcItem.isFinallyQc=Is finally qc
+QcItem.finallyQcFrequency=Finally qc frequency
+QcItem.isRoundsQc=Is rounds qc
+QcItem.roundsQcFrequency=Rounds qc frequency
+QcItem.isControl\ =Is control 
+QcItem.isControlItem=Is control item
+QcItem.SopOrSipPicture=Sop or sip picture
+QcItem.picture=Picture
+QcItem.qcFlow=Qc flow
+QcFlow=Qc flow
+QcFlow.carModel=Car model
+QcFlow.qcCourse=Qc course
+QcFlow.workStation=Work station
+QcFlow.qcItem=Qc item
