--- a/modules/global/src/com/zk/nlqc/entitys/complex/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/complex/messages_zh_CN.properties
@@ -10,3 +10,32 @@ QcCourse.qcCourseNo=途程编号
 QcCourse.qcCourseName=途程名称
 QcCourse.workStation=质检工作站
 QcCourse.note=备注
+QcCourse.qcFlow=Qc flow
+QcItem=质检项
+QcItem.qcItemNo=质检项编号
+QcItem.qcItemName=质检项名称
+QcItem.qcArgs=检测参数
+QcItem.device=仪器
+QcItem.mateial=关键物料
+QcItem.unit=单位
+QcItem.normValue=标准值
+QcItem.upValue=上限值
+QcItem.belowValue=下限值
+QcItem.isFirstQc=首检否
+QcItem.firstQcFrequency=首检频次
+QcItem.isInitiativeQc=自主检否
+QcItem.initiativeQcFrequency=自主检频次
+QcItem.isFinallyQc=末检否
+QcItem.finallyQcFrequency=末检频次
+QcItem.isRoundsQc=循检否
+QcItem.roundsQcFrequency=循检频次
+QcItem.isControl\ =是否限定管制
+QcItem.isControlItem=管制否
+QcItem.SopOrSipPicture=SOP/SIP图片
+QcItem.picture=作业指导
+QcItem.qcFlow=Qc flow
+QcFlow=质检流程
+QcFlow.carModel=车型号
+QcFlow.qcCourse=质检途程
+QcFlow.workStation=质检工作站
+QcFlow.qcItem=质检项
