--- a/modules/web/src/com/zk/nlqc/web/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages.properties
@@ -1,8 +1,8 @@
 
 application.caption = CUBA Application
-application.logoImage = branding/app-icon-menu.png
+application.logoImage = branding/app-icon-login.png
 
-loginWindow.logoImage = branding/app-icon-login.png
+loginWindow.logoImage = branding/app-icon-menu.png
 
 menu-config.application-nlqc = Application
 menu-config.nlqc_CarModel.browse=Car Models
@@ -14,3 +14,5 @@ menu-config.nlqc_QcArgs.browse=Qc Argses
 menu-config.nlqc_WorkStation.browse=Work Stations
 menu-config.qcConfig=Qc Config
 menu-config.nlqc_QcCourse.browse=Qc Courses
+menu-config.nlqc_QcItem.browse=Qc Items
+menu-config.nlqc_QcFlow.browse=Qc Flows
