--- a/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
@@ -15,3 +15,5 @@ menu-config.nlqc_Material.browse=物料
 menu-config.qcConfig=质检配置
 menu-config.nlqc_WorkStation.browse=质检工作站
 menu-config.nlqc_QcCourse.browse=质检途程
+menu-config.nlqc_QcItem.browse=质检项
+menu-config.nlqc_QcFlow.browse=车型检测配置
