--- a/modules/global/src/com/zk/nlqc/enums/messages.properties
+++ b/modules/global/src/com/zk/nlqc/enums/messages.properties
@@ -1,3 +1,6 @@
 QcTypeEnum=Qc type enum
 QcTypeEnum.IPQC=Ipqc
 QcTypeEnum.FQC=Fqc
+QcReturn=Qc return
+QcReturn.RETURNTOREPAIR=Returntorepair
+QcReturn.NEW_VALUE=New value
