--- a/modules/web/src/com/zk/nlqc/web/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages.properties
@@ -1,10 +1,10 @@
-
 application.caption = CUBA Application
-application.logoImage = branding/app-icon-login.png
-
-loginWindow.logoImage = branding/app-icon-menu.png
-
+loginWindow.welcomeLabel = Welcome to CUBA!
+application.logoImage = branding/app-icon-menu.png
+loginWindow.logoImage = branding/app-icon-login.png
+cuba.poweredBy = NuoLi Intelligent Manufacturing
 menu-config.application-nlqc = Application
+
 menu-config.nlqc_CarModel.browse=Car Models
 menu-config.base=Base
 menu-config.nlqc_Device.browse=Devices
@@ -16,3 +16,6 @@ menu-config.qcConfig=Qc Config
 menu-config.nlqc_QcCourse.browse=Qc Courses
 menu-config.nlqc_QcItem.browse=Qc Items
 menu-config.nlqc_QcFlow.browse=Qc Flows
+menu-config.nlqc_QcRecordItem.browse=Qc Record Items
+menu-config.qcRecord=Qc Record
+menu-config.nlqc_FinalRecord.browse=Final Records
