--- a/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
@@ -1,10 +1,9 @@
-
-application.caption = nlqc
+application.caption = 诺力质检系统
+loginWindow.welcomeLabel = 质检系统登陆
 application.logoImage = branding/app-icon-menu.png
-
 loginWindow.logoImage = branding/app-icon-login.png
-
 menu-config.application-nlqc = Application
+cuba.poweredBy = 诺力智能 http://www.noblelift.cn
 
 menu-config.base=基础模块
 menu-config.nlqc_CarModel.browse=车型
@@ -17,3 +16,6 @@ menu-config.nlqc_WorkStation.browse=质检工作站
 menu-config.nlqc_QcCourse.browse=质检途程
 menu-config.nlqc_QcItem.browse=质检项
 menu-config.nlqc_QcFlow.browse=车型检测配置
+menu-config.qcRecord=质检记录
+menu-config.nlqc_QcRecordItem.browse=质检记录
+menu-config.nlqc_FinalRecord.browse=质检结果记录
