--- a/modules/global/src/com/zk/nlqc/entitys/base/messages.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/base/messages.properties
@@ -24,3 +24,7 @@ CarModel=Car model
 CarModel.carModelNo=Car model no
 CarModel.carModelName=Car model name
 CarModel.note=Note
+UnitForFrequency=Unit for frequency
+UnitForFrequency.unitName=Unit name
+UnitForFrequency.value=Value
+UnitForFrequency.unit=Unit
