--- a/modules/global/src/com/zk/nlqc/entitys/base/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/base/messages_zh_CN.properties
@@ -24,3 +24,7 @@ CarModel=车型
 CarModel.carModelNo=车型编号
 CarModel.carModelName=车型名称
 CarModel.note=备注
+UnitForFrequency=频率单位
+UnitForFrequency.unitName=频率单位
+UnitForFrequency.value=数值
+UnitForFrequency.unit=单位
