--- a/modules/global/src/com/zk/nlqc/enums/messages.properties
+++ b/modules/global/src/com/zk/nlqc/enums/messages.properties
@@ -4,3 +4,9 @@ QcTypeEnum.FQC=Fqc
 QcReturn=Qc return
 QcReturn.RETURNTOREPAIR=Returntorepair
 QcReturn.NEW_VALUE=New value
+FrequencyUnitEnum=Frequency unit enum
+FrequencyUnitEnum.PIECE=Piece
+FrequencyUnitEnum.HOUR=Hour
+FrequencyUnitEnum.MINUTE=Minute
+FrequencyUnitEnum.DAY=Day
+FrequencyUnitEnum.MONTH=Month
