--- a/modules/global/src/com/zk/nlqc/enums/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/enums/messages_zh_CN.properties
@@ -3,3 +3,9 @@ QcTypeEnum.FQC=最终质检
 QcReturn=Qc return
 QcReturn.RETURNTOREPAIR=返修
 QcReturn.NEW_VALUE=New value
+FrequencyUnitEnum=Frequency unit enum
+FrequencyUnitEnum.PIECE=件
+FrequencyUnitEnum.HOUR=小时
+FrequencyUnitEnum.MINUTE=分钟
+FrequencyUnitEnum.DAY=天
+FrequencyUnitEnum.MONTH=月
