质检记录重写，质检标准编辑页面校验，部分关系改为多对多。

--- a/modules/global/src/com/zk/nlqc/entitys/base/messages.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/base/messages.properties
@@ -4,12 +4,15 @@ QcArgs.qcArgsType=Qc args type
 QcArgs.qcArgsNote=Qc args note
 QcArgs.workStation=Work station
 QcArgs.note=Note
+QcArgs.workStations=Work stations
 Device=Device
 Device.deviceNo=Device no
 Device.deviceName=Device name
 Device.deviceModel=Device model
 Device.deviceStatus=Device status
 Device.note=Note
+Device.deviceType=Device type
+Device.workStation=Work station
 Material=Material
 Material.materialNo=Material no
 Material.materialName=Material name
@@ -20,6 +23,9 @@ Frequency.unit=Unit
 Frequency.isInfinityBig=Is infinity big
 Frequency.showText=Show text
 Frequency.note=Note
+Frequency.Frequency=Frequency
+Frequency.frequency=Frequency
+Frequency.frequencyNo=Frequency no
 CarModel=Car model
 CarModel.carModelNo=Car model no
 CarModel.carModelName=Car model name
