--- a/modules/global/src/com/zk/nlqc/entitys/base/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/base/messages_zh_CN.properties
@@ -4,12 +4,15 @@ QcArgs.qcArgsType=检测参数类别
 QcArgs.qcArgsNote=检测事项说明
 QcArgs.workStation=Work station
 QcArgs.note=备注
+QcArgs.workStations=Work stations
 Device=仪器台账
 Device.deviceNo=仪器编号
 Device.deviceName=仪器名称
 Device.deviceModel=仪器型号
 Device.deviceStatus=仪器状态
 Device.note=备注
+Device.deviceType=仪器类型
+Device.workStation=Work station
 Material=物料
 Material.materialNo=物料编号
 Material.materialName=物料名称
@@ -20,6 +23,9 @@ Frequency.unit=单位
 Frequency.isInfinityBig=全检
 Frequency.showText=显示文字
 Frequency.note=备注
+Frequency.Frequency=质检频率编号
+Frequency.frequency=Frequency
+Frequency.frequencyNo=质检频率编号
 CarModel=车型
 CarModel.carModelNo=车型编号
 CarModel.carModelName=车型名称
