--- a/modules/global/src/com/zk/nlqc/entitys/complex/messages.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/complex/messages.properties
@@ -5,6 +5,8 @@ WorkStation.qcArgs=Qc args
 WorkStation.qcCourse=Qc course
 WorkStation.note=Note
 WorkStation.workStation=Work station
+WorkStation.device=Device
+WorkStation.qcCourses=Qc courses
 QcCourse=Qc course
 QcCourse.qcCourseNo=Qc course no
 QcCourse.qcCourseName=Qc course name
@@ -34,8 +36,11 @@ QcItem.isControlItem=Is control item
 QcItem.SopOrSipPicture=Sop or sip picture
 QcItem.picture=Picture
 QcItem.qcFlow=Qc flow
+QcItem.qcFlows=Qc flows
 QcFlow=Qc flow
 QcFlow.carModel=Car model
 QcFlow.qcCourse=Qc course
 QcFlow.workStation=Work station
 QcFlow.qcItem=Qc item
+QcFlow.isUse=Is use
+QcFlow.qcFlowNo=Qc flow no
