--- a/modules/global/src/com/zk/nlqc/entitys/complex/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/complex/messages_zh_CN.properties
@@ -5,6 +5,8 @@ WorkStation.qcArgs=质检参数
 WorkStation.qcCourse=Qc course
 WorkStation.note=备注
 WorkStation.workStation=工作站名称
+WorkStation.device=仪器
+WorkStation.qcCourses=Qc courses
 QcCourse=质检途程
 QcCourse.qcCourseNo=途程编号
 QcCourse.qcCourseName=途程名称
@@ -34,8 +36,11 @@ QcItem.isControlItem=管制否
 QcItem.SopOrSipPicture=SOP/SIP图片
 QcItem.picture=作业指导
 QcItem.qcFlow=Qc flow
+QcItem.qcFlows=Qc flows
 QcFlow=质检流程
 QcFlow.carModel=车型号
 QcFlow.qcCourse=质检途程
 QcFlow.workStation=质检工作站
 QcFlow.qcItem=质检项
+QcFlow.isUse=是否启用
+QcFlow.qcFlowNo=质检标准编号
