--- a/modules/global/src/com/zk/nlqc/entitys/record/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/record/messages_zh_CN.properties
@@ -5,34 +5,37 @@ QcRecordBills.qcWorkStationNo=检测工作站编号
 QcRecordBills.qcWorkStationName=检测工作站名称
 QcRecordBills.qcType=质检类型
 QcRecordBills.qcArgsNo=检测参数编号
-QcRecordBills.qcArgsType=检测参数类型
-QcRecordBills.qcItemNo=检测项编号
-QcRecordBills.qcItemName=检测项名称
-QcRecordBills.keyMaterialNo=关键物料编号
-QcRecordBills.keyMaterialName=关键物理名称
-QcRecordBills.realityInMaterialNo=实际投料物料编号
-QcRecordBills.keyDeviceNo=关键设备编号
-QcRecordBills.keyDeviceName=关键设备名称
-QcRecordBills.normValue=标准值
-QcRecordBills.upValue=上限值
-QcRecordBills.belowValue=下限值
-QcRecordBills.realityValue=实际值
-QcRecordBills.unit=单位
-QcRecordBills.firstQcFrequency=首检频次
-QcRecordBills.initiativeQcFrequency=自主检频次
-QcRecordBills.finallyQcFrequency=末检频率
-QcRecordBills.roundsQcFrequency=巡检频率
-QcRecordBills.isControlItem=是否限定管制
-QcRecordBills.qcDevice=检查设备名称
-QcRecordBills.qcTime=检查时间
-QcRecordBills.isQualified=是否合格
-QcRecordBills.isGobackRepair=是否返修
-QcRecordBills.refuseReceive=拒收
-QcRecordBills.forceReceive=强制允收
-QcRecordBills.oncePass=正常通过
-QcRecordBills.ngMessage=不合格信息
 FinalRecord=质检结果
 FinalRecord.flowNo=流水号
 FinalRecord.carModelNo=车型编号
 FinalRecord.finalResult=最终结果
 FinalRecord.carModelName=车型名称
+QcRecordBillsItem=检测项记录
+QcRecordBillsItem.qcRecordBillItem=检测项记录编号
+QcRecordBillsItem.qcItemNo=检测项编号
+QcRecordBillsItem.qcArgsNo=检测参数编号
+QcRecordBillsItem.keyMaterialNo=关键物料编号
+QcRecordBillsItem.actualMaterialNo=实际投料物料编号
+QcRecordBillsItem.qcDeviceNo=检测设备编号
+QcRecordBillsItem.actualDeviceNo=实际检测设备
+QcRecordBillsItem.normValue=标准值
+QcRecordBillsItem.upValue=上限值
+QcRecordBillsItem.downValue=下限值
+QcRecordBillsItem.actualValue=实际值
+QcRecordBillsItem.unit=单位
+QcRecordBillsItem.firstHz=首检频次
+QcRecordBillsItem.initiativeHz=自主检频次
+QcRecordBillsItem.lastHz=末检频次
+QcRecordBillsItem.circleHz=循检频次
+QcRecordBillsItem.qcTime=检测时间
+QcRecordBillsItem.isControl=是否限定
+QcRecordBillsItem.qcResult=检测结果
+QcRecordBillsItem.note=说明
+QcRecordBillsItem.qcRecordBills=Qc record bills
+QcRecordBills.qcRecordBillItem=质检记录项编号
+QcRecordBills.createTime=创建时间
+QcRecordBills.qcRecordItem=质检记录项
+QcRecordBills.qcArgsType=检测参数类型
+QcRecordBills.qcUser=质检员工号
+QcRecordBills.qcRresult=质检结果
+QcRecordBills.note=描述
