--- a/modules/global/src/com/zk/nlqc/enums/messages.properties
+++ b/modules/global/src/com/zk/nlqc/enums/messages.properties
@@ -10,3 +10,14 @@ FrequencyUnitEnum.HOUR=Hour
 FrequencyUnitEnum.MINUTE=Minute
 FrequencyUnitEnum.DAY=Day
 FrequencyUnitEnum.MONTH=Month
+DeviceType=Device type
+DeviceType.WEIGH=Weigh
+DeviceType.HEIGHT=Height
+DeviceType.ELSE=Else
+QcResult=Qc result
+QcResult.OK=Ok
+QcResult.NG=Ng
+QcResult.REFUSE=Refuse
+QcResult.ONE_PASS=One pass
+QcResult.FORCE_IN_CONE=Force in cone
+QcResult.GO_BACK=Go back
