--- a/modules/global/src/com/zk/nlqc/enums/messages_zh_CN.properties
+++ b/modules/global/src/com/zk/nlqc/enums/messages_zh_CN.properties
@@ -9,3 +9,14 @@ FrequencyUnitEnum.HOUR=小时
 FrequencyUnitEnum.MINUTE=分钟
 FrequencyUnitEnum.DAY=天
 FrequencyUnitEnum.MONTH=月
+DeviceType=Device type
+DeviceType.WEIGH=称重
+DeviceType.HEIGHT=测高
+DeviceType.ELSE=其他
+QcResult=Qc result
+QcResult.OK=合格
+QcResult.NG=不合格
+QcResult.REFUSE=拒收
+QcResult.ONE_PASS=一次通过
+QcResult.FORCE_IN_CONE=强制允收
+QcResult.GO_BACK=返修
