--- a/modules/web/src/com/zk/nlqc/web/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages.properties
@@ -19,3 +19,6 @@ menu-config.nlqc_QcFlow.browse=Qc Flows
 menu-config.nlqc_QcRecordItem.browse=Qc Record Items
 menu-config.qcRecord=Qc Record
 menu-config.nlqc_FinalRecord.browse=Final Records
+menu-config.statistics=Statistics
+menu-config.dataCollection=Data Collection
+menu-config.nlqc_QcRecordBills.browse=Qc Record Billses
