--- a/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
@@ -15,7 +15,10 @@ menu-config.qcConfig=质检配置
 menu-config.nlqc_WorkStation.browse=质检工作站
 menu-config.nlqc_QcCourse.browse=质检途程
 menu-config.nlqc_QcItem.browse=质检项
-menu-config.nlqc_QcFlow.browse=车型检测配置
+menu-config.nlqc_QcFlow.browse=质检标准
 menu-config.qcRecord=质检记录
-menu-config.nlqc_QcRecordItem.browse=质检记录
-menu-config.nlqc_FinalRecord.browse=质检结果记录
+menu-config.nlqc_QcRecordItem.browse=质检记录数据集
+menu-config.nlqc_FinalRecord.browse=最终结果
+menu-config.statistics=数据统计
+menu-config.dataCollection=数据集
+menu-config.nlqc_QcRecordBills.browse=质检记录
