--- a/modules/web/src/com/zk/nlqc/web/screens/qcrecordbills/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/screens/qcrecordbills/messages.properties
@@ -1,2 +1,9 @@
 browseCaption=QcRecordBills browser
 editorCaption=QcRecordBills editor
+tab_qualityQc=Tab quality Qc
+tab_deviceQc=Tab device Qc
+Tab=Tab
+tab_guiseQc=Tab guise Qc
+tab_MaterialQc=Tab  Material Qc
+tab_all=Tab all
+qcRItem=Qc R Item
