--- a/modules/web/src/com/zk/nlqc/web/screens/qcrecordbills/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/screens/qcrecordbills/messages_zh_CN.properties
@@ -1,2 +1,9 @@
 browseCaption=质检记录
 editorCaption=编辑质检记录
+tab_qualityQc=质量检测
+tab_deviceQc=设备检测
+Tab=物料检测
+tab_guiseQc=外观检测
+tab_MaterialQc=物料检测
+tab_all=所有
+qcRItem=质检记录项
