--- a/modules/global/src/com/zk/nlqc/entitys/record/messages.properties
+++ b/modules/global/src/com/zk/nlqc/entitys/record/messages.properties
@@ -5,34 +5,37 @@ QcRecordBills.qcWorkStationNo=Qc work station no
 QcRecordBills.qcWorkStationName=Qc work station name
 QcRecordBills.qcType=Qc type
 QcRecordBills.qcArgsNo=Qc args no
-QcRecordBills.qcArgsType=Qc args type
-QcRecordBills.qcItemNo=Qc item no
-QcRecordBills.qcItemName=Qc item name
-QcRecordBills.keyMaterialNo=Key material no
-QcRecordBills.keyMaterialName=Key material name
-QcRecordBills.realityInMaterialNo=Reality in material no
-QcRecordBills.keyDeviceNo=Key device no
-QcRecordBills.keyDeviceName=Key device name
-QcRecordBills.normValue=Norm value
-QcRecordBills.upValue=Up value
-QcRecordBills.belowValue=Below value
-QcRecordBills.realityValue=Reality value
-QcRecordBills.unit=Unit
-QcRecordBills.firstQcFrequency=First qc frequency
-QcRecordBills.initiativeQcFrequency=Initiative qc frequency
-QcRecordBills.finallyQcFrequency=Finally qc frequency
-QcRecordBills.roundsQcFrequency=Rounds qc frequency
-QcRecordBills.isControlItem=Is control item
-QcRecordBills.qcDevice=Qc device
-QcRecordBills.qcTime=Qc time
-QcRecordBills.isQualified=Is qualified
-QcRecordBills.isGobackRepair=Is goback repair
-QcRecordBills.refuseReceive=Refuse receive
-QcRecordBills.forceReceive=Force receive
-QcRecordBills.oncePass=Once pass
-QcRecordBills.ngMessage=Ng message
 FinalRecord=Final record
 FinalRecord.flowNo=Flow no
 FinalRecord.carModelNo=Car model no
 FinalRecord.finalResult=Final result
 FinalRecord.carModelName=Car model name
+QcRecordBillsItem=Qc record bills item
+QcRecordBillsItem.qcRecordBillItem=Qc record bill item
+QcRecordBillsItem.qcItemNo=Qc item no
+QcRecordBillsItem.qcArgsNo=Qc args no
+QcRecordBillsItem.keyMaterialNo=Key material no
+QcRecordBillsItem.actualMaterialNo=Actual material no
+QcRecordBillsItem.qcDeviceNo=Qc device no
+QcRecordBillsItem.actualDeviceNo=Actual device no
+QcRecordBillsItem.normValue=Norm value
+QcRecordBillsItem.upValue=Up value
+QcRecordBillsItem.downValue=Down value
+QcRecordBillsItem.actualValue=Actual value
+QcRecordBillsItem.unit=Unit
+QcRecordBillsItem.firstHz=First hz
+QcRecordBillsItem.initiativeHz=Initiative hz
+QcRecordBillsItem.lastHz=Last hz
+QcRecordBillsItem.circleHz=Circle hz
+QcRecordBillsItem.qcTime=Qc time
+QcRecordBillsItem.isControl=Is control
+QcRecordBillsItem.qcResult=Qc result
+QcRecordBillsItem.note=Note
+QcRecordBillsItem.qcRecordBills=Qc record bills
+QcRecordBills.qcRecordBillItem=Qc record bill item
+QcRecordBills.createTime=Create time
+QcRecordBills.qcRecordItem=Qc record item
+QcRecordBills.qcArgsType=Qc args type
+QcRecordBills.qcUser=Qc user
+QcRecordBills.qcRresult=Qc rresult
+QcRecordBills.note=Note
