统计分析模块的冗余表Y整理各类的必填字段

--- a/modules/web/src/com/zk/nlqc/web/messages.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages.properties
@@ -22,3 +22,4 @@ menu-config.nlqc_FinalRecord.browse=Final Records
 menu-config.statistics=Statistics
 menu-config.dataCollection=Data Collection
 menu-config.nlqc_QcRecordBills.browse=Qc Record Billses
+menu-config.nlqc_QcRecordArchive.browse=Qc Record Archives
