--- a/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
+++ b/modules/web/src/com/zk/nlqc/web/messages_zh_CN.properties
@@ -22,3 +22,4 @@ menu-config.nlqc_FinalRecord.browse=最终结果
 menu-config.statistics=数据统计
 menu-config.dataCollection=数据集
 menu-config.nlqc_QcRecordBills.browse=质检记录
+menu-config.nlqc_QcRecordArchive.browse=质检记录存档
